data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_732.wast
;; 3. **Test Description:**    - Test a nested loop structure with conditions based on decreasing variable values where the `br_if` condition is boundary-tested to toggle just at the threshold.    - **Constraint Checked:** Proper condition evaluation under edge cases (boundary condition change).    - **Test Relation:** Ensures `br_if` correctly evaluates threshold conditions without incorrect early exits or loops.

(assert_invalid
  (module
    (func $test
      (block (loop (block (br_if 1 (i32.eq (i32.const 0) (i32.const 1)))))
    )
  )
  "type mismatch"
)